fixed search added carousel and  hover

--- a/collectr/src/App.css
+++ b/collectr/src/App.css
@@ -12,7 +12,8 @@ body {
   margin: 0;
 }
 .nav li {
-  font-family: 'Oswald', sans-serif;
+  /* font-family: 'Oswald', sans-serif; */
+  font-family: Verdana, Geneva, sans-serif;
   font-size: 1.2em;
   line-height: 40px;
   height: 40px;
@@ -51,6 +52,16 @@ body {
     margin-right: -4px;
   }
 
+
+  .img {
+    position: relative;
+    float: left;
+    width:  300px;
+    height: 300px;
+    background-position: 50% 50%;
+    background-repeat:   no-repeat;
+    background-size:     cover;
+}
   /* Options 2 - Float
   .nav li {
     float: left;
@@ -64,4 +75,31 @@ body {
     background-color: #444;
   }
   */
+}
+
+
+/* hover */
+.btn-img {
+    display: block;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    cursor: pointer;
+    background-color: white;
+    outline: 1px dotted blue;
+}
+.btn-img .img-wrap {
+    margin: 10px;
+}
+
+.btn-img img {
+    display: block;
+}
+
+.btn-img:hover .img-wrap {
+    background-color: black;
+}
+
+.btn-img:hover img {
+    opacity: 0.1;
 }
