--- a/collectr/src/App.css
+++ b/collectr/src/App.css
@@ -1,3 +1,5 @@
+/* nav bar */
+
 body {
   margin: 0;
   padding: 0;
@@ -56,8 +58,8 @@ body {
   .img {
     position: relative;
     float: left;
-    width:  300px;
-    height: 300px;
+    width:  100%;
+    height: 100%;
     background-position: 50% 50%;
     background-repeat:   no-repeat;
     background-size:     cover;
@@ -101,5 +103,5 @@ body {
 }
 
 .btn-img:hover img {
-    opacity: 0.1;
+    opacity: 0.5;
 }
