--- a/collectr/src/App.css
+++ b/collectr/src/App.css
@@ -1,6 +1,6 @@
 /* nav bar */
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   background: #ccc;
@@ -12,47 +12,47 @@ body {
   text-align: center;
   padding: 0;
   margin: 0;
-}
-.nav li {
+} */
+/* .nav li { */
   /* font-family: 'Oswald', sans-serif; */
-  font-family: Verdana, Geneva, sans-serif;
+  /* font-family: Verdana, Geneva, sans-serif;
   font-size: 1.2em;
   line-height: 40px;
   height: 40px;
   border-bottom: 1px solid #888;
-}
+} */
 
-.nav a {
+/* .nav a {
   text-decoration: none;
   color: #fff;
   display: block;
   transition: .3s background-color;
-}
+} */
 
-.nav a:hover {
+/* .nav a:hover {
   background-color: #005f5f;
-}
+} */
 
-.nav a.active {
+/* .nav a.active {
   background-color: #fff;
   color: #444;
   cursor: default;
-}
+} */
 
-@media screen and (min-width: 600px) {
+/* @media screen and (min-width: 600px) {
   .nav li {
     width: 120px;
     border-bottom: none;
     height: 50px;
     line-height: 50px;
     font-size: 1.4em;
-  }
+  } */
 
   /* Option 1 - Display Inline */
-  .nav li {
+  /* .nav li {
     display: inline-block;
     margin-right: -4px;
-  }
+  } */
 
 
   .img {
@@ -77,7 +77,7 @@ body {
     background-color: #444;
   }
   */
-}
+/* } */
 
 
 /* hover */
@@ -87,8 +87,8 @@ body {
     padding: 0;
     border: 0;
     cursor: pointer;
-    background-color: white;
-    outline: 1px dotted blue;
+    background-color: black;
+    /* outline: 1px dotted blue; */
 }
 .btn-img .img-wrap {
     margin: 10px;
@@ -104,4 +104,39 @@ body {
 
 .btn-img:hover img {
     opacity: 0.5;
+}
+
+/* pixel-art photo */
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 25%;
+    padding-left: 50px;
+    color: #FFF;
+}
+
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+  padding:8px 15px;
+  background:rgba(50, 50, 50, 0.2);
+  border:0px solid #dbdbdb;
+  color: #FFF;
+
+}
+
+.App{
+  background-color: #000
+}
+
+.artist{
+  color: #FFF;
+  font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
 }
